country_dialing_code migration removed

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ APP_ENV=local
 APP_KEY=base64:VeJsIvm0PdrH5F8X/myxozKgyfJ97JQ8FQZHzAAa++w=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL="https://call2fix.woju.com.ng/"
-ADMIN_URL="https://secure.call2fix.luxconsole.com"
-API_URL="https://api.call2fix.luxconsole.com"
+APP_URL="https://call2fix-app.alphamead.com"
+ADMIN_URL="https://call2fix-app.alphamead.com/secure"
+API_URL="https://call2fix-app.alphamead.com"
 
 TELESCOPE_ENABLED=false
  
@@ -28,9 +28,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql 
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=wojucomn_call2F
-DB_USERNAME=wojucomn_call2F
-DB_PASSWORD=wojucomn_call2F
+DB_DATABASE=laravel
+DB_USERNAME=laravel
+DB_PASSWORD=laravel
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
