--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,6 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=reverb
-#BROADCAST_CONNECTION=ably
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -128,7 +127,7 @@ SANCTUM_STATEFUL_DOMAINS="api.call2fix.test"
 FIREBASE_DATABASE_URL=https://<your-project>.firebaseio.com
 FIREBASE_CREDENTIALS=storage/call2fix.json
 
-ABLY_KEY='0FUIiA.WS7twg:Vsv5DF4_4BF8QQkStQUVS-xmb9iyWd9frZrfvbt_RUA'
+# ABLY_KEY='0FUIiA.WS7twg:Vsv5DF4_4BF8QQkStQUVS-xmb9iyWd9frZrfvbt_RUA'
 
 #----------------------------------------------------------------
 #   KWIK DELIVERY CONFIGS
